--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,12 +15,18 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.sreesharp.simpletodo.TodoActivity"
+            android:windowSoftInputMode="adjustPan" 
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+           
+        </activity>
+        <activity
+            android:name="com.sreesharp.simpletodo.EditItemActivity"
+            android:label="@string/title_activity_edit_item" >
         </activity>
     </application>
 
